@@ -1,5 +1,10 @@
 2007-11-27  Neal H. Walfield  <neal@gnu.org>
 
+	* thread.c (thread_commission): After creating the exception
+	thread, stop it cancelling any pending IPC.
+
+2007-11-27  Neal H. Walfield  <neal@gnu.org>
+
 	* server.c (server_loop): Add improve debugging output.
 
 2007-11-23  Neal H. Walfield  <neal@gnu.org>
